deploy/kubernetes/base/deploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: match-schedule
  labels:
    app: match-schedule
    version: v1
spec:
  minReadySeconds: 1
  selector:
    matchLabels:
      app: match-schedule
      version: v1
  template:
    metadata:
      labels:
        app: match-schedule
        version: v1
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: docker-secret
      containers:
      - imagePullPolicy: Always
        name: match-schedule
        image: match-schedule
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort: 8000
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: match-schedule
  labels:
    app: match-schedule
spec:
  ports:
  - name: grpc
    port: 8000
    targetPort: 8000
  selector:
    app: match-schedule
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: match-schedule
spec:
  host: match-schedule
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
